[metadata]
name = kavalkade
version = 0.1a1
url =
project_urls =
    Source Code = https://github.com/aldryss/kavalkade
license = BSD-3-Clause
author =
author_email =
maintainer =
maintainer_email =
description =
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.10

[options.packages.find]
where=src
